--- a/WindowsServiceHelper/Views/ServiceView.xaml
+++ b/WindowsServiceHelper/Views/ServiceView.xaml
@@ -1,15 +1,36 @@
 ﻿<UserControl x:Class="ServiceProcess.Helpers.Views.ServiceView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
-        <StackPanel Orientation="Horizontal">
-            <TextBlock Margin="2"
-                       Text="{Binding Name}" />
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:controls="clr-namespace:ServiceProcess.Helpers.Controls"
+             mc:Ignorable="d"
+             d:DesignHeight="30"
+             d:DesignWidth="300">
+    <UserControl.Resources>
+        <BooleanToVisibilityConverter x:Key="boolToVis" />
+    </UserControl.Resources>
+    <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="Auto" />
+            <ColumnDefinition Width="20" />
+        </Grid.ColumnDefinitions>
 
-            <TextBlock Margin="2"
-                       Text="{Binding CurrentState}" />
-        </StackPanel>
+        <TextBlock Margin="2"
+                   Grid.Column="0"
+                   Text="{Binding Name}" />
+
+        <TextBlock Margin="2"
+                   Grid.Column="1"
+                   Text="{Binding CurrentState}" />
+
+        <controls:GifImage  Grid.Column="2"
+                            AnimationSource="pack://application:,,,/ServiceProcess.Helpers;component/Images/spinner.gif"
+                            Stretch="None"
+                            Visibility="{Binding Path=IsBusy, Converter={StaticResource boolToVis}}" />
+
+    </Grid>
+
+
 </UserControl>
