--- a/WindowsServiceHelper/App.xaml
+++ b/WindowsServiceHelper/App.xaml
@@ -1,6 +1,7 @@
 ﻿<Application x:Class="ServiceProcess.Helpers.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             x:ClassModifier="internal">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
