--- a/WindowsServiceHelper/Views/ServiceView.xaml
+++ b/WindowsServiceHelper/Views/ServiceView.xaml
@@ -5,6 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:controls="clr-namespace:ServiceProcess.Helpers.Controls"
              mc:Ignorable="d"
+             x:ClassModifier="internal"
              d:DesignHeight="30"
              d:DesignWidth="300">
     <UserControl.Resources>
