--- a/WindowsServiceHelper/Views/ServiceView.xaml
+++ b/WindowsServiceHelper/Views/ServiceView.xaml
@@ -1,37 +1,31 @@
-﻿<UserControl x:Class="ServiceProcess.Helpers.Views.ServiceView"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+﻿<UserControl xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:controls="clr-namespace:ServiceProcess.Helpers.Controls"
-             mc:Ignorable="d"
-             x:ClassModifier="internal"
-             d:DesignHeight="30"
-             d:DesignWidth="300">
-    <UserControl.Resources>
-        <BooleanToVisibilityConverter x:Key="boolToVis" />
-    </UserControl.Resources>
-    <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="Auto" />
-            <ColumnDefinition Width="20" />
-        </Grid.ColumnDefinitions>
+             x:Class="ServiceProcess.Helpers.Views.ServiceView"
+             x:ClassModifier="internal">
+  
+  <UserControl.Resources>
+    <BooleanToVisibilityConverter x:Key="boolToVis" />
+  </UserControl.Resources>
+  
+  <Grid>
+    <Grid.ColumnDefinitions>
+      <ColumnDefinition Width="*" />
+      <ColumnDefinition Width="Auto" />
+      <ColumnDefinition Width="20" />
+    </Grid.ColumnDefinitions>
 
-        <TextBlock Margin="2"
-                   Grid.Column="0"
-                   Text="{Binding Name}" />
+    <TextBlock Margin="2"
+               Grid.Column="0"
+               Text="{Binding Name}" />
 
-        <TextBlock Margin="2"
-                   Grid.Column="1"
-                   Text="{Binding CurrentState}" />
+    <TextBlock Margin="2"
+               Grid.Column="1"
+               Text="{Binding CurrentState}" />
 
-        <controls:GifImage  Grid.Column="2"
-                            AnimationSource="pack://application:,,,/ServiceProcess.Helpers;component/Images/spinner.gif"
-                            Stretch="None"
-                            Visibility="{Binding Path=IsBusy, Converter={StaticResource boolToVis}}" />
-
-    </Grid>
-
-
+    <controls:GifImage  Grid.Column="2"
+                        AnimationSource="pack://application:,,,/ServiceProcess.Helpers;component/Images/spinner.gif"
+                        Stretch="None"
+                        Visibility="{Binding Path=IsBusy, Converter={StaticResource boolToVis}}" />
+  </Grid>
 </UserControl>
