--- a/WindowsServiceHelper/Views/ServicesControllerView.xaml
+++ b/WindowsServiceHelper/Views/ServicesControllerView.xaml
@@ -1,44 +1,31 @@
-﻿<UserControl x:Class="ServiceProcess.Helpers.Views.ServicesControllerView"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+﻿<UserControl xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             x:ClassModifier="internal"
-             mc:Ignorable="d"
-             d:DesignHeight="300"
-             d:DesignWidth="300">
-    <UserControl.Resources>
-        <Style TargetType="{x:Type Image}">
-            <Style.Triggers>
-                <DataTrigger Binding="{Binding RelativeSource={RelativeSource AncestorType={x:Type Button}, AncestorLevel=1}, Path=IsEnabled}"
-                             Value="False">
-                    <Setter Property="Opacity"
-                            Value="0.50"></Setter>
-                </DataTrigger>
-            </Style.Triggers>
-        </Style>
-    </UserControl.Resources>
-    <DockPanel>
-
-        <ToolBar DockPanel.Dock="Top">
-            <Button Command="{Binding StartCommand}">
-                <Image Width="32"
-                       Height="32"
-                       Source="/ServiceProcess.Helpers;component/Images/control_play_blue.png" />
-            </Button>
-            <Button Command="{Binding PauseCommand}">
-                <Image Width="32"
-                       Height="32"
-                       Source="/ServiceProcess.Helpers;component/Images/control_pause_blue.png" />
-            </Button>
-            <Button Command="{Binding StopCommand}">
-                <Image Width="32"
-                       Height="32"
-                       Source="/ServiceProcess.Helpers;component/Images/control_stop_blue.png" />
-            </Button>
-
-        </ToolBar>
-        <ListView ItemsSource="{Binding Services}"
-                  SelectedItem="{Binding SelectedService}" />
-    </DockPanel>
+             x:Class="ServiceProcess.Helpers.Views.ServicesControllerView"
+             x:ClassModifier="internal">
+  
+  <UserControl.Resources>
+    <Style TargetType="{x:Type Image}">
+      <Style.Triggers>
+        <DataTrigger Binding="{Binding RelativeSource={RelativeSource AncestorType={x:Type Button}, AncestorLevel=1}, Path=IsEnabled}" Value="False">
+          <Setter Property="Opacity" Value="0.50" />
+        </DataTrigger>
+      </Style.Triggers>
+    </Style>
+  </UserControl.Resources>
+  
+  <DockPanel>
+    <ToolBar DockPanel.Dock="Top">
+      <Button Command="{Binding StartCommand}">
+        <Image Width="32" Height="32" Source="/ServiceProcess.Helpers;component/Images/control_play_blue.png" />
+      </Button>
+      <Button Command="{Binding PauseCommand}">
+        <Image Width="32" Height="32" Source="/ServiceProcess.Helpers;component/Images/control_pause_blue.png" />
+      </Button>
+      <Button Command="{Binding StopCommand}">
+        <Image Width="32" Height="32" Source="/ServiceProcess.Helpers;component/Images/control_stop_blue.png" />
+      </Button>
+    </ToolBar>
+    
+    <ListView ItemsSource="{Binding Services}" SelectedItem="{Binding SelectedService}" />
+  </DockPanel>
 </UserControl>
